# denAI

./: .env.example  .gitignore  README.md  pyproject.toml  pyrightconfig.json  ruff.toml
docs/: local-dev.md  slack-app-manifest.yaml
src/denai/: __main__.py  app.py  config.py  errors.py  jira.py
src/denai/llm/: orchestrator.py
src/denai/mcp/: catalog.py  dispatch.py  pool.py
src/denai/slack/: bot.py  formatting.py  memory.py
tests/: test_catalog.py  test_config.py  test_formatting.py  test_memory.py
