[project]
name = "denai"
version = "0.1.0"
description = "denAI - Internal Slack AI agent powered by Claude and MCP servers"
requires-python = ">=3.12"
authors = [{name = "Denis Marchenko"}]
dependencies = [
    "anthropic>=0.40.0",
    "slack-bolt>=1.20.0",
    "mcp>=1.0.0",
    "pydantic-settings>=2.5.0",
    "structlog>=24.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pyright>=1.1.380",
    "ruff>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/denai"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["integration: marks tests as integration (deselect with '-m \"not integration\"')"]
